# python-imcflibs

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  DESC.md  DEVELOPMENT.md  README.md  TESTING.md  TODO-BDV.md  conftest.py  poetry.lock.md  pom.xml  pyproject.toml  release.properties  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: build.yml  dispatch-deploy-pages.yml  lint.yml  pytest-poetry.yml  pytest-python2.yml
docs/: Makefile  conf.py  index.rst
local-packages/imcf-fiji-mocks/: README.md
local-packages/micrometa/: README.md
local-packages/sjlogging/: README.md
scripts/: check-if-release.sh  doctest_runner.py  mvn-build-deploy.sh  parse-python-deps.py  pom-to-pyproject.sh  py2-pytest.sh  run-poetry.sh
src/imcflibs/: __init__.py  iotools.py  log.py  pathtools.py  strtools.py
src/imcflibs/imagej/: 3dsuite.py  BDV.py  _loci.py  bdv.py  bioformats.py  gpu.py  labelimage.py  misc.py  objects3d.py  omero.py  omerotools.py  prefs.py  processing.py  projections.py  resultstable.py  roimanager.py  roimgr3d.py  shading.py  sjlog.py  split.py  stitching.py  trackmate.py
tests/: conftest.py  test_iotools.py  test_pathtools.py  test_skeleton.py  test_strtools.py
tests/bdv/: test_define_dataset_auto.py  test_definitionoptions.py  test_processingoptions.py  test_processingoptions_example3.py  test_processingoptions_example4.py
tests/imagej/: test_bioformats_write_bf_memofile_01.py  test_trackmate.md
tests/imagej/bioformats/import_image/: test_01.py
tests/imagej/bioformats/write_bf_memoryfile/: test_01.py
tests/interactive-imagej/: send-notification-email.md  shading-test.md
tests/interactive-imagej/bioformats/import_image/: test_01.py
tests/interactive-imagej/bioformats/metadata/: test_metadata.md
